Use spark-submit script in SparkLauncher.
To reduce the surface for backwards compatibility, make SparkLauncher
launch child processes through the spark-submit script. This way, the
library doesn't need to know about the distribution layout of the Spark
version being launched, as long as it has a "bin/spark-submit" script.

Do some cleanup and fix a couple of issues that the change unearthed.